fix: scroll/tags places itinerary spacing

--- a/src/app/trip/register/places/places.component.scss
+++ b/src/app/trip/register/places/places.component.scss
@@ -66,10 +66,9 @@
       transition:all 150ms ease;
       
       .place-tags {        
-        width: 42vh;
-        position: absolute;
-        top: 46px;
-        right: 21px;
+          position: absolute;
+           top: 46px;
+           left: 40px;
         span{
           background: #888b92;
           padding: 1px 6px;
